app/k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dr-sim-app
  labels:
    app: dr-sim-app
spec:
  type: ClusterIP
  selector:
    app: dr-sim-app
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
