app/k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dr-sim-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/healthcheck-port: "8080"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:311902596413:certificate/0bed8bfd-98ea-427b-9c05-7e9b6a87cbec
spec:
  ingressClassName: alb
  tls:
    - hosts:
        - infratocloud.xyz
  rules:
    - host: infratocloud.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dr-sim-app
                port:
                  number: 80
  defaultBackend:
    service:
      name: dr-sim-app
      port:
        number: 80
